# ChimeraStack_project

./: README.md  codebase.md  codebase2.md  codebase3.md  codebase_current.md  pyproject.toml  requirements.txt
chimera_stack/: __init__.py  cli.py
chimera_stack/core/: __init__.py  config.py  docker_manager.py  environment.py  setup_wizard.py
chimera_stack/frameworks/: base.py
chimera_stack/frameworks/php/: __init__.py  base_php.py  laravel.py  symfony.py  vanilla.py
chimera_stack/frameworks/python/: __init__.py  base_python.py  django.py  flask.py  vanilla.py
chimera_stack/services/: __init__.py
chimera_stack/services/databases/: base.py  mariadb.py  mysql.py  postgresql.py
chimera_stack/services/webservers/: apache.py  base.py  nginx.py
devstack_factory/: __init__.py  cli.py
devstack_factory/core/: __init__.py  config.py  environment.py
devstack_factory/frameworks/php/: base_php.py  laravel.py  symfony.py  vanilla.py
devstack_factory/frameworks/python/: base_python.py  django.py  flask.py  vanilla.py
devstack_factory/services/databases/: base.py  mysql.py  postgresql.py
src/: cli.py
src/core/: config.py  docker_manager.py
src/frameworks/: __init__.py  base.py
src/frameworks/php/: base_php.py  laravel.py  symfony.py  vanilla.py
src/frameworks/python/: base_python.py  django.py  flask.py  vanilla.py
src/services/databases/: __init__.py  mariadb.py
src/services/webservers/: __init__.py  apache.py  base.py  nginx.py
