# pyproject.toml
[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "devstack-factory"
version = "0.1.0"
description = "A Docker-centric development environment factory for PHP and Python projects"
readme = "README.md"
authors = [{ name = "Jaouad Bouddehbine", email = "your.email@example.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
keywords = ["docker", "development", "environment", "php", "python"]
dependencies = [
    "click>=8.0.0",
    "docker>=6.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/yourusername/devstack-factory"
Repository = "https://github.com/yourusername/devstack-factory.git"

[project.scripts]
devstack = "devstack_factory.cli:cli"